Simple fix for raid time collapse not working on iphone

--- a/src/main/resources/static/css/badgerstyle.css
+++ b/src/main/resources/static/css/badgerstyle.css
@@ -154,6 +154,7 @@ body {
     padding-right: 7px;
     display: flex;
     justify-content: space-between;
+    cursor: pointer; 
 }
 .badger-last-raid.collapsed .badger-info-raid::before {
 	content: "\f0da\a0";
